// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          FilmRate
        </a>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <form
                class="d-flex"
              >
                <input
                  class="form-control"
                  name="search"
                  placeholder="Search"
                  type="search"
                />
                <button
                  class="mx-2 btn btn-secondary"
                  type="submit"
                >
                  Search
                </button>
              </form>
            </li>
          </ul>
          <ul
            class="nav"
          >
            <li
              class="px-2 nav-item"
            >
              <a
                class="btn btn-secondary"
                href="/profile"
              >
                Profile
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="btn btn-secondary"
                href="/reviews"
              >
                My Reviews
              </a>
            </li>
            <li
              class="px-2 nav-item"
            >
              <a
                class="btn btn-secondary"
                href="/"
              >
                Log out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark"
    >
      <div
        class="container-fluid"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          FilmRate
        </a>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <form
                class="d-flex"
              >
                <input
                  class="form-control"
                  name="search"
                  placeholder="Search"
                  type="search"
                />
                <button
                  class="mx-2 btn btn-secondary"
                  type="submit"
                >
                  Search
                </button>
              </form>
            </li>
          </ul>
          <ul
            class="nav"
          >
            <li
              class="px-2 nav-item"
            >
              <a
                class="btn btn-secondary"
                href="/login"
              >
                Log in
              </a>
            </li>
            <li
              class="mr-1 nav-item"
            >
              <a
                class="btn btn-secondary"
                href="/signup"
              >
                Sign up
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
